# allure-step-rewriter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FILES_ANALYSIS.md  LICENSE  MANIFEST.in  PUBLISH_INSTRUCTIONS.md  QUICK_PUBLISH_GUIDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
allure_step_rewriter/: __init__.py  exceptions.py  rewrite_step.py  version.py
examples/: README.md  basic_usage.py  multiple_overrides.py  nested_steps.py  pytest_integration.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_edge_cases.py  test_error_handling.py  test_import.py  test_multiple_overrides.py  test_rewrite_step_context.py  test_rewrite_step_decorator.py
